Add rec_name column on extra_premium view, rename kind to motive

--- a/modules/loan/locale/fr_FR.po
+++ b/modules/loan/locale/fr_FR.po
@@ -22,37 +22,30 @@ msgctxt "field:contract,loans:"
 msgid "Loans"
 msgstr "Prêts"
 
-#, fuzzy
 msgctxt "field:contract,loans_ordered:"
 msgid "Loans"
 msgstr "Prêts"
 
-#, fuzzy
 msgctxt "field:contract-loan,contract:"
 msgid "Contract"
 msgstr "Contrat"
 
-#, fuzzy
 msgctxt "field:contract-loan,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
 
-#, fuzzy
 msgctxt "field:contract-loan,create_date_:"
 msgid "Creation date"
 msgstr "Date de Création"
 
-#, fuzzy
 msgctxt "field:contract-loan,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-#, fuzzy
 msgctxt "field:contract-loan,id:"
 msgid "ID"
 msgstr "ID"
 
-#, fuzzy
 msgctxt "field:contract-loan,loan:"
 msgid "Loan"
 msgstr "Prêt"
@@ -61,27 +54,22 @@ msgctxt "field:contract-loan,loan_number:"
 msgid "Loan Number"
 msgstr "Numéro de prêt"
 
-#, fuzzy
 msgctxt "field:contract-loan,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Must Expand Tree"
 
-#, fuzzy
 msgctxt "field:contract-loan,rec_name:"
 msgid "Name"
 msgstr "Nom"
 
-#, fuzzy
 msgctxt "field:contract-loan,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-#, fuzzy
 msgctxt "field:contract-loan,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-#, fuzzy
 msgctxt "field:contract-loan,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
@@ -102,52 +90,42 @@ msgctxt "field:contract.covered_data,person:"
 msgid "Person"
 msgstr "Personne Physique"
 
-#, fuzzy
 msgctxt "field:contract.covered_data-loan.share,covered_data:"
 msgid "Covered Data"
 msgstr "Données de Couverture"
 
-#, fuzzy
 msgctxt "field:contract.covered_data-loan.share,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
 
-#, fuzzy
 msgctxt "field:contract.covered_data-loan.share,create_date_:"
 msgid "Creation date"
 msgstr "Date de Création"
 
-#, fuzzy
 msgctxt "field:contract.covered_data-loan.share,create_uid:"
 msgid "Create User"
 msgstr "Créé par"
 
-#, fuzzy
 msgctxt "field:contract.covered_data-loan.share,id:"
 msgid "ID"
 msgstr "ID"
 
-#, fuzzy
 msgctxt "field:contract.covered_data-loan.share,loan_share:"
 msgid "Loan Share"
 msgstr "Quotité"
 
-#, fuzzy
 msgctxt "field:contract.covered_data-loan.share,rec_name:"
 msgid "Name"
-msgstr "Valeur"
+msgstr "Nom"
 
-#, fuzzy
 msgctxt "field:contract.covered_data-loan.share,write_date:"
 msgid "Write Date"
 msgstr "Date de mise à jour"
 
-#, fuzzy
 msgctxt "field:contract.covered_data-loan.share,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-#, fuzzy
 msgctxt "field:contract.covered_data-loan.share,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
@@ -155,6 +133,10 @@ msgstr "Identifiant XML"
 msgctxt "field:contract.covered_data.extra_premium,capital_per_mil_rate:"
 msgid "Rate on Capital"
 msgstr "Pourmillage"
+
+msgctxt "field:contract.covered_data.extra_premium,is_loan:"
+msgid "Is Loan"
+msgstr "Emprunteur"
 
 msgctxt "field:contract.option,is_loan:"
 msgid "Is Loan"
@@ -168,7 +150,6 @@ msgctxt "field:loan,contract:"
 msgid "Contract"
 msgstr "Contrat"
 
-#, fuzzy
 msgctxt "field:loan,contracts:"
 msgid "Contracts"
 msgstr "Contrats"
@@ -209,7 +190,6 @@ msgctxt "field:loan,early_payments:"
 msgid "Early Payments"
 msgstr "Remboursements Anticipés"
 
-#, fuzzy
 msgctxt "field:loan,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
@@ -282,7 +262,6 @@ msgctxt "field:loan,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-#, fuzzy
 msgctxt "field:loan,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
@@ -459,7 +438,6 @@ msgctxt "field:loan.increment,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-#, fuzzy
 msgctxt "field:loan.increment,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
@@ -552,12 +530,10 @@ msgctxt "field:loan.payment,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-#, fuzzy
 msgctxt "field:loan.payment,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
-#, fuzzy
 msgctxt "field:loan.share,covered_data:"
 msgid "Covered Data"
 msgstr "Données de Couverture"
@@ -590,7 +566,6 @@ msgctxt "field:loan.share,must_expand_tree:"
 msgid "Must Expand Tree"
 msgstr "Etendre Arbre"
 
-#, fuzzy
 msgctxt "field:loan.share,option:"
 msgid "Contract Option"
 msgstr "Garantie Souscrite"
@@ -619,7 +594,6 @@ msgctxt "field:loan.share,write_uid:"
 msgid "Write User"
 msgstr "Mis à jour par"
 
-#, fuzzy
 msgctxt "field:loan.share,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
@@ -673,7 +647,7 @@ msgid "Loan Share"
 msgstr "Quotité"
 
 msgctxt "model:tag,name:tag_loan"
-msgid "Loan"
+msgid "Prêt"
 msgstr "Prêt"
 
 msgctxt "selection:contract.covered_data.extra_premium,calculation_kind:"
