--- a/modules/billing_group_life_fr/locale/fr_FR.po
+++ b/modules/billing_group_life_fr/locale/fr_FR.po
@@ -837,7 +837,7 @@ msgstr "Règle de Tarification Collective"
 
 msgctxt "model:billing.premium.rate.rule.line,name:"
 msgid "Premium Rate Rule Line"
-msgstr ""
+msgstr "Ligne de Règle de Taux de Cotisation"
 
 msgctxt "model:billing.premium_rate.form,name:"
 msgid "Rate Note"
