CDE152 Add address to bank and remove lender from loan

--- a/modules/bank_cog/locale/fr_FR.po
+++ b/modules/bank_cog/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -61,3 +61,7 @@ msgstr "Compte bancaire principal"
 msgctxt "view:party.party:"
 msgid "Bank"
 msgstr "Banque"
+
+msgctxt "field:bank,main_address:"
+msgid "Main Address"
+msgstr "Adresse Principale"
