CDE055 loan share propagation

--- a/modules/contract_insurance/locale/fr_FR.po
+++ b/modules/contract_insurance/locale/fr_FR.po
@@ -325,6 +325,10 @@ msgctxt "field:contract.covered_data,extra_premiums:"
 msgid "Extra Premiums"
 msgstr "Surprimes"
 
+msgctxt "field:contract.covered_data,icon:"
+msgid "Icon"
+msgstr "Icône"
+
 msgctxt "field:contract.covered_data,id:"
 msgid "ID"
 msgstr "ID"
@@ -537,6 +541,10 @@ msgctxt "field:contract.covered_element,extra_data_summary:"
 msgid "Complementary Data"
 msgstr "Données Complémentaires"
 
+msgctxt "field:contract.covered_element,icon:"
+msgid "Icon"
+msgstr "Icône"
+
 msgctxt "field:contract.covered_element,id:"
 msgid "ID"
 msgstr "ID"
@@ -556,6 +564,10 @@ msgstr "Type de Bien"
 msgctxt "field:contract.covered_element,main_contract:"
 msgid "Contract"
 msgstr "Contrat"
+
+msgctxt "field:contract.covered_element,multi_mixed_view:"
+msgid "Covered Element Data"
+msgstr "Données de Couverture"
 
 msgctxt "field:contract.covered_element,must_expand_tree:"
 msgid "Must Expand Tree"
@@ -892,6 +904,11 @@ msgid "Covered Element"
 msgstr "Elément Couvert"
 
 msgctxt ""
+"field:contract.wizard.option_subscription.options_displayer,hide_covered_element:"
+msgid "Hide Covered Element"
+msgstr ""
+
+msgctxt ""
 "field:contract.wizard.option_subscription.options_displayer,possible_covered_elements:"
 msgid "Covered Elements"
 msgstr "Eléments Couverts"
@@ -1067,6 +1084,10 @@ msgstr "Gérer les surprimes"
 msgctxt "model:ir.action,name:act_renewal_wizard"
 msgid "Renew Contracts"
 msgstr "Renouvellement"
+
+msgctxt "model:ir.action,name:manage_options"
+msgid "Manage Options"
+msgstr "Gérer les Options"
 
 msgctxt "model:ir.ui.menu,name:menu_contract"
 msgid "Contract"
