--- a/modules/contract_life/locale/fr_FR.po
+++ b/modules/contract_life/locale/fr_FR.po
@@ -44,7 +44,7 @@ msgstr "Mis à jour par"
 
 msgctxt "model:contract.covered_element-party,name:"
 msgid "Relation between Covered Element and Covered Relations"
-msgstr ""
+msgstr "Relation Element Couvert et Relations"
 
 msgctxt "view:contract.covered_element:"
 msgid "Covered Person"
