--- a/modules/loan/locale/fr_FR.po
+++ b/modules/loan/locale/fr_FR.po
@@ -94,12 +94,12 @@ msgctxt "field:loan,currency_symbol:"
 msgid "Currency Symbol"
 msgstr "Symbole"
 
-msgctxt "field:loan,defferal:"
-msgid "Defferal"
+msgctxt "field:loan,deferal:"
+msgid "Deferal"
 msgstr "Différé"
 
-msgctxt "field:loan,defferal_duration:"
-msgid "Defferal Duration"
+msgctxt "field:loan,deferal_duration:"
+msgid "Deferal Duration"
 msgstr "Durée du Différé"
 
 msgctxt "field:loan,early_payments:"
@@ -109,6 +109,10 @@ msgstr "Remboursements Anticipés"
 msgctxt "field:loan,end_date:"
 msgid "End Date"
 msgstr "Date de Fin"
+
+msgctxt "field:loan,first_payment_amount:"
+msgid "First Payment Amount"
+msgstr "Montant Première Echéance"
 
 msgctxt "field:loan,first_payment_date:"
 msgid "First Payment Date"
@@ -129,6 +133,10 @@ msgstr "Paliers"
 msgctxt "field:loan,kind:"
 msgid "Kind"
 msgstr "Type"
+
+msgctxt "field:loan,last_payment_amount:"
+msgid "Last Payment Amount"
+msgstr "Montant Dernière Echéance"
 
 msgctxt "field:loan,loan_shares:"
 msgid "Loan Shares"
@@ -182,6 +190,11 @@ msgctxt "field:loan,xml_id:"
 msgid "XML Id"
 msgstr "Identifiant XML"
 
+#, fuzzy
+msgctxt "field:loan.increment,begin_balance:"
+msgid "Begin Balance"
+msgstr "Capital Restant Dû Initial"
+
 msgctxt "field:loan.increment,create_date:"
 msgid "Create Date"
 msgstr "Date de création"
@@ -206,8 +219,8 @@ msgctxt "field:loan.increment,currency_symbol:"
 msgid "Currency Symbol"
 msgstr "Symbole de la Devise"
 
-msgctxt "field:loan.increment,defferal:"
-msgid "Defferal"
+msgctxt "field:loan.increment,deferal:"
+msgid "Deferal"
 msgstr "Différé"
 
 msgctxt "field:loan.increment,end_date:"
@@ -349,7 +362,7 @@ msgstr "ID"
 
 msgctxt "field:loan.payment,interest:"
 msgid "Interest"
-msgstr "Intérêt"
+msgstr "Intérêts"
 
 msgctxt "field:loan.payment,kind:"
 msgid "Kind"
@@ -519,15 +532,15 @@ msgctxt "selection:contract.covered_data.extra_premium,duration_unit:"
 msgid "Year"
 msgstr "Année"
 
-msgctxt "selection:loan,defferal:"
+msgctxt "selection:loan,deferal:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:loan,defferal:"
+msgctxt "selection:loan,deferal:"
 msgid "Fully deferred"
 msgstr "Différé Total"
 
-msgctxt "selection:loan,defferal:"
+msgctxt "selection:loan,deferal:"
 msgid "Partially Deferred"
 msgstr "Différé Partiel"
 
@@ -559,10 +572,6 @@ msgctxt "selection:loan,kind:"
 msgid "Leasing"
 msgstr "Crédit Bail"
 
-msgctxt "selection:loan,kind:"
-msgid "Revolving"
-msgstr "Crédit Permanent"
-
 msgctxt "selection:loan,payment_frequency:"
 msgid ""
 msgstr " "
@@ -583,15 +592,15 @@ msgctxt "selection:loan,payment_frequency:"
 msgid "Year"
 msgstr "Année"
 
-msgctxt "selection:loan.increment,defferal:"
+msgctxt "selection:loan.increment,deferal:"
 msgid ""
 msgstr " "
 
-msgctxt "selection:loan.increment,defferal:"
+msgctxt "selection:loan.increment,deferal:"
 msgid "Fully deferred"
 msgstr "Différé Total"
 
-msgctxt "selection:loan.increment,defferal:"
+msgctxt "selection:loan.increment,deferal:"
 msgid "Partially Deferred"
 msgstr "Différé Partiel"
 
